Agregando cambios recientes en front y back

--- a/Frontend/src/app/users/registration-page/registration-page.component.html
+++ b/Frontend/src/app/users/registration-page/registration-page.component.html
@@ -15,7 +15,7 @@
   <form
     [formGroup]="myForm"
     class="example-form"
-    (ngSubmit)="register(myForm.value)"
+    (ngSubmit)="userService.register(myForm.value)"
   >
     <mat-form-field class="full-width-input">
       <mat-label class="label-uno">Correo Electronico*</mat-label>
