--- a/Frontend/src/app/wallet/pages/inicio/inicio.component.html
+++ b/Frontend/src/app/wallet/pages/inicio/inicio.component.html
@@ -10,9 +10,12 @@
     </mat-form-field>
   </div>
 
-  <div class="card2">
+
+  <div class="card2" >
     <mat-card class="text-center mx-5 mb-5 texto-violeta tamano">
-      <h4 class="bienvenidos">¡Hola “usuario”, estás en tu cuenta!</h4>
+          <h4 class="bienvenidos" *ngIf="dataUser">
+            ¡Hola {{dataUser.nombreCompleto | json}}, estás en tu cuenta!
+          </h4>
       <mat-card-content class="dosImg">
         <img [src]="logoPil" class="mat-card-image logopil" />
         <div class="contienepag">
@@ -20,6 +23,7 @@
         </div>
       </mat-card-content>
     </mat-card>
+
 
     <mat-card class="mx-5 texto-violeta">
       <mat-card-title class="text-center">Cuenta - 12345678</mat-card-title>
